weather forecast frontend

--- a/pathManager/conf/database.ini
+++ b/pathManager/conf/database.ini
@@ -1,6 +1,6 @@
 [postgresql]
 host=localhost
 database=PathManager
-user=mattia971
-password=niernier
-port=50001
+user=pathmanager
+password=password
+port=5432
