Microservizi VisitManager(fine) e WeatherForecast. Da ritestare

--- a/visitManager/conf/database.ini
+++ b/visitManager/conf/database.ini
@@ -1,6 +1,6 @@
 [postgresql]
 host=localhost
 database=VisitManager
-user=mattia971
-password=niernier
+user=visitmanager
+password=password
 port=50000
