--- a/pathManager/conf/database.ini
+++ b/pathManager/conf/database.ini
@@ -1,6 +1,18 @@
-[postgresql]
+app_mode=docker_compose
+
+[no_container]
 host=127.0.0.1
+port=5432
 dbname=PathManager
 user=pathmanager
 password=password
-port=50001
+quote="
+dbtype=postgres
+[docker_compose]
+host=db_path_manager
+port=3306
+dbname=PathManager
+user=pathmanager
+password=password
+quote=
+dbtype=mysql
