--- a/api_gateway/conf/host.ini
+++ b/api_gateway/conf/host.ini
@@ -15,7 +15,10 @@ host_review_manager=review_manager
 port_review_manager=9091
 
 host_weather_forecast=weather_forecast
-port_weather_forecast=50052
+port_weather_forecast=9092
+
+host_visit_manager=visit_manager
+port_visit_manager=9093
 
 [no_container]
 host_frontend=127.0.0.1
@@ -31,4 +34,7 @@ host_review_manager=127.0.0.1
 port_review_manager=9091
 
 host_weather_forecast=127.0.0.1
-port_weather_forecast=50052
+port_weather_forecast=9092
+
+host_visit_manager=127.0.0.1
+port_visit_manager=9093
