--- a/visitManager/conf/database.ini
+++ b/visitManager/conf/database.ini
@@ -1,6 +1,20 @@
-[postgresql]
+[app_mode]
+app_mode = docker_compose
+
+[docker_compose]
+host=db_visit_manager
+database=VisitManager
+user=visitmanager
+password=password
+port=3306
+dbtype=mysql
+quote=
+
+[no_container]
 host=localhost
 database=VisitManager
 user=visitmanager
 password=password
 port=5432
+dbtype=postgres
+quote="
