--- a/reviewManager/Dockerfile
+++ b/reviewManager/Dockerfile
@@ -1,12 +1,13 @@
-FROM openjdk:17
+FROM eclipse-temurin:17-jdk-focal
 
 WORKDIR reviewManager
 
 COPY .mvn ./.mvn
 COPY mvnw.cmd ./
 COPY mvnw ./
-COPY reviewManager.iml ./
 COPY pom.xml ./
+COPY reviewManager.iml ./
+RUN sed -i 's/\r$//' mvnw
 RUN ./mvnw dependency:resolve
 
 COPY src ./src
