--- a/api_gateway/conf/host.ini
+++ b/api_gateway/conf/host.ini
@@ -1,5 +1,5 @@
 # possible values: docker_compose, no_container
-app_mode=docker_compose
+app_mode=no_container
 
 [docker_compose]
 host_frontend=frontend
