--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,13 @@ services:
     ports:
       - "9093:9093"
 
+  notification_manager:
+    build: ./notificationManager
+    ports:
+      - "9094:9094"
+    volumes:
+      - $HOME/.aws/credentials:/home/app/.aws/credentials:ro
+
   db_path_manager:
     image: mysql:5.7
     environment:
