Notification api gateway

--- a/api_gateway/conf/host.ini
+++ b/api_gateway/conf/host.ini
@@ -20,6 +20,9 @@ port_weather_forecast=9092
 host_visit_manager=visit_manager
 port_visit_manager=9093
 
+host_notification=notification
+port_notification=9094
+
 [no_container]
 host_frontend=127.0.0.1
 port_frontend=8080
@@ -38,3 +41,6 @@ port_weather_forecast=9092
 
 host_visit_manager=127.0.0.1
 port_visit_manager=9093
+
+host_notification=127.0.0.1
+port_notification=9094
