modifica docker compose

--- a/visitManager/Dockerfile
+++ b/visitManager/Dockerfile
@@ -7,6 +7,7 @@ RUN pip install protobuf
 RUN pip install psycopg2-binary
 RUN pip install mysql-connector-python
 RUN pip install pandas
+RUN pip install boto3
 
 EXPOSE 9093
 
