--- a/conf/host.ini
+++ b/conf/host.ini
@@ -1,5 +1,5 @@
 # possible values: docker_compose, no_container
-app_mode= no_container
+app_mode= docker_compose
 
 [docker_compose]
 host_frontend=frontend
