--- a/pathManager/conf/database.ini
+++ b/pathManager/conf/database.ini
@@ -2,6 +2,7 @@ app_mode = docker_compose
 
 [no_container]
 host=127.0.0.1
+host_port=8081
 port=5432
 dbname=PathManager
 user=pathmanager
@@ -10,6 +11,7 @@ quote="
 dbtype=postgres
 [docker_compose]
 host=db_path_manager
+host_port=8081
 port=3306
 dbname=PathManager
 user=pathmanager
