--- a/visitManager/conf/database.ini
+++ b/visitManager/conf/database.ini
@@ -3,6 +3,7 @@ app_mode = docker_compose
 
 [docker_compose]
 host=db_visit_manager
+host_port=9093
 database=VisitManager
 user=visitmanager
 password=password
@@ -12,6 +13,7 @@ quote=
 
 [no_container]
 host=localhost
+host_port=9093
 database=VisitManager
 user=visitmanager
 password=password
