--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     ports:
       - "9094:9094"
     volumes:
-      - $HOST_ADDRESS/.aws/:/root/.aws:ro
+      - $HOST_ADDRESS/.aws/credentials:/root/.aws/credentials:ro
 
   db_path_manager:
     image: mysql:5.7
